# pynews

./: .coverage  .gitignore  LICENSE  README.md  conftest.py  pyproject.toml
core/: client.py
core/models/: __init__.py  article.py  search.py
core/utils/: exception.py
pynews/: client.py
pynews/models/: article.py  search.py
pynews/utils/: exception.py
tests/samples/: bad_data.json  data.json
tests/unit/: test_client.py  test_models.py
